--- a/src/main/resources/assets/mineciv/lang/en_us.json
+++ b/src/main/resources/assets/mineciv/lang/en_us.json
@@ -9,5 +9,7 @@
   "block.mineciv.monument": "Monument",
 
   "creativetab.mineciv.alexandrite_items": "Alexandrite Items",
-  "creativetab.mineciv.alexandrite_blocks": "Alexandrite Blocks"
+  "creativetab.mineciv.alexandrite_blocks": "Alexandrite Blocks",
+
+  "entity.minecraft.villager.mineciv.cultivator": "Cultivator"
 }
