--- a/src/main/resources/assets/mineciv/lang/en_us.json
+++ b/src/main/resources/assets/mineciv/lang/en_us.json
@@ -13,6 +13,7 @@
   "creativetab.mineciv.alexandrite_blocks": "Alexandrite Blocks",
 
   "entity.minecraft.villager.mineciv.cultivator": "Cultivator",
+  "entity.minecraft.villager.mineciv.lumberjack": "Lumberjack",
   "entity.minecraft.villager.mineciv.knight": "Knight"
 
 }
